--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
        </head>
 
         <body>  
-                <nav class="navbar navbar-expand-lg navbar-light bg-light"
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark"
                   
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="index.html">
                         <img src="logo.jpg" width="100" height="50" class="d-inline-block align-top" alt="" loading="lazy">
                       </a>
                     <a class="navbar-brand" href="#"></a>
@@ -31,7 +31,7 @@
                           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="usr_login.html"><i class="bi bi-person"></i> Profile</a>
+                          <a class="nav-link" href="newlogin.html"><i class="bi bi-person"></i> Profile</a>
                         </li>
                         <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,9 +45,9 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Accessories</a>
                           </div>
-                          <li class="nav-item">
+                          <!-- <li class="nav-item">
                             <a class="nav-link" href="#"><i class="bi bi-cart3"></i> My Orders</a>
-                          </li>
+                          </li> -->
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="AboutUs.html"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-person-fill" viewBox="0 0 16 16">
@@ -309,6 +309,7 @@
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+            <script src="auth.js"></script>
         </body>
 
     </html>
